# aoc2021

./: .gitignore  AUTHORS.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  aoc2021  go.mod  main.go
aoc_python/: pyproject.toml
aoc_python/aoc_python/: constants.py
aoc_python/notebooks/: day_4.ipynb  day_5.ipynb  day_6.ipynb  day_7.ipynb
aoc_python/tests/: test_aoc_python.py
data/day_4/: day_4_test.txt
src/day_1/: day_1.go
src/day_2/: day_2.go
src/day_3/: day_3.go  day_3_test.go
src/day_4/: day_4.go
src/matrix/: matrix.go
src/utils/: utils.go
